--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -16,6 +16,9 @@
             <div class="col-md-2 stream-queue">
                 <h2>Stream queue</h2>
 
+                <div class="jumbotron text-center">
+                    <h4>No games in the queue</h4>
+                </div>
             </div>
 
             <div class="col-md-6">
@@ -159,7 +162,6 @@
                     </p>
                 </form>
 
-                <a href="/overlays/melee/singles" target="_blank">Melee singles overlay</a>
 
             </div>
             <div class="col-md-4">
@@ -167,6 +169,8 @@
                     <summary>Overlay preview</summary>
 
                     <iframe src="/overlays/melee/singles" width="100%" height="450"></iframe>
+
+                    <a href="/overlays/melee/singles" target="_blank">Melee singles overlay on new window</a>
                 </details>
             </div>
         </div>
@@ -176,6 +180,7 @@
     <script type="text/javascript" src="/lib/lodash/lodash.js"></script>
 
     <script type="text/javascript" src="/common/js/services/api-service.js"></script>
+    <script type="text/javascript" src="/common/js/services/smash-gg-api-service.js"></script>
     <script type="text/javascript" src="js/admin.js"></script>
 </body>
 </html>
