Added autofil for streamer and tournament name

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -14,7 +14,7 @@
 
         <div class="row">
             <div class="col-md-2 stream-queue">
-                <h2>Stream queue</h2>
+                <h2>Smash.gg Tournament</h2>
 
                 <details open="true">
                     <summary>Tournament data</summary>
@@ -118,7 +118,7 @@
 
                                 <div class="form-group">
                                     <label>Score</label>
-                                    <input type="number" class="form-control" v-model="player.score" />
+                                    <input type="number" class="form-control form-control-lg" v-model="player.score" />
                                 </div>
                             </div>
                         </div>
