--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -7,13 +7,14 @@
 
     <title>HypestBoard admin page</title>
     <link href="/lib/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet" />
+    <link href="/lib/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <div id="scoreBoardAdmin" class="container-fluid">
         <h1>HypestBoard admin page</h1>
 
         <div class="row">
-            <div class="col-md-2 stream-queue">
+            <div class="col-md-4 stream-queue">
                 <h2>Smash.gg Tournament</h2>
 
                 <details open="true">
@@ -45,8 +46,14 @@
 
                     <div v-for="set in tournament.stationQueue.data.entities.sets">
                         <h5>{{ set.midRoundText }}</h5>
+                        <a class="btn btn-sm btn-success" href @click.prevent><i class="fa fa-check"></i></a>
                         <span v-for="(entrant, index) in set.entrants">
-                            {{ entrant.name }}
+                            <span v-if="entrant">
+                                {{ entrant.name }}
+                            </span>
+                            <span v-if="!entrant">
+                                -
+                            </span>
                             <span v-if="index < set.entrants.length - 1">VS</span>
                         </span>
                         <hr/>
@@ -54,7 +61,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <form novalidate @submit.prevent="updateScoreboard">
                     <div class="form-group">
                         <label>Game configuration</label>
@@ -64,6 +71,8 @@
                             </option>
                         </select>
                     </div>
+                    
+                    <a href="/overlays/melee/singles" target="_blank">Melee singles overlay on new window</a>
 
                     <details open="true">
                         <summary><strong>Players</strong></summary>
@@ -196,15 +205,6 @@
                 </form>
 
 
-            </div>
-            <div class="col-md-4">
-                <details open="true">
-                    <summary>Overlay preview</summary>
-
-                    <iframe src="/overlays/melee/singles" width="100%" height="450"></iframe>
-
-                    <a href="/overlays/melee/singles" target="_blank">Melee singles overlay on new window</a>
-                </details>
             </div>
         </div>
     </div>
