--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -116,8 +116,10 @@
                                                 </div>
                                             </div>
                                             <select class="form-control" v-model="player.flag">
-                                                <option v-for="(flagName, flagAbbr) in flagList" v-bind:value="{name: flagName, icon: '/lib/svg-country-flags/svg/' + flagAbbr.toLowerCase() + '.svg'}">
-                                                    {{ flagName }}
+                                                <option
+                                                    v-for="(countryName, countryCode) in flagList"
+                                                    v-bind:value="getFlag(countryName, countryCode)">
+                                                    {{ countryName }}
                                                 </option>
                                             </select>
                                         </div>
