--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -75,77 +75,92 @@
                     <a href="/overlays/melee/singles" target="_blank">Melee singles overlay on new window</a>
 
                     <details open="true">
-                        <summary><strong>Players</strong></summary>
+                        <summary><strong>Teams</strong></summary>
 
                         <div class="row">
-                            <div class="col-md-6" v-for="(player, playerIndex) in scoreBoard.players">
-                                <h2>Player {{ playerIndex + 1 }}</h2>
-                                <div class="row">
-                                    <div class="col-6 form-group">
-                                        <label>Name</label>
-                                        <input type="text" class="form-control" v-model="player.name" />
-                                    </div>
-
-
-                                    <div class="col-6 form-group">
-                                        <label>Character</label>
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <div class="input-group-text">
-                                                    <img v-bind:src="player.character.icon" height="24" v-if="player.character.icon" />
-                                                    <span v-if="!player.character.icon">?</span>
-                                                </div>
-                                            </div>
-                                            <select class="form-control" v-model="player.character">
-                                                <option v-for="character in characterList" v-bind:value="character">
-                                                    {{ character.name }}
-                                                </option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col form-group">
-                                        <label>Flag</label>
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <div class="input-group-text">
-                                                    <img v-bind:src="player.flag.icon" height="16" v-if="player.flag.icon" />
-                                                    <span v-if="!player.flag.icon">?</span>
-                                                </div>
-                                            </div>
-                                            <select class="form-control" v-model="player.flag">
-                                                <option
-                                                    v-for="(countryName, countryCode) in flagList"
-                                                    v-bind:value="getFlag(countryName, countryCode)">
-                                                    {{ countryName }}
-                                                </option>
-                                            </select>
-                                        </div>
-                                    </div>
-
-                                    <div class="col form-group">
-                                        <label>Sponsor</label>
-                                        <input type="text" class="form-control" v-model="player.sponsor.name" />
-                                    </div>
-                                </div>
-
+                            <div class="col-md-6" v-for="(entrant, entrantIndex) in scoreBoard.entrants">
                                 <div class="form-group">
-                                    <label>Score</label>
-                                    <input type="number" class="form-control form-control-lg" v-model="player.score" />
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" v-model="entrant.name" />
+                                    
                                 </div>
+
+                                <details open="true">
+                                    <summary><strong>Players</strong></summary>
+
+                                    <div class="row">
+                                        <div class="col-md-6" v-for="(player, playerIndex) in entrant.players">
+                                            <h2>Player {{ playerIndex + 1 }}</h2>
+                                            <div class="row">
+                                                <div class="col-6 form-group">
+                                                    <label>Name</label>
+                                                    <input type="text" class="form-control" v-model="player.name" />
+                                                </div>
+
+
+                                                <div class="col-6 form-group">
+                                                    <label>Character</label>
+                                                    <div class="input-group">
+                                                        <div class="input-group-prepend">
+                                                            <div class="input-group-text">
+                                                                <img v-bind:src="player.character.icon" height="24" v-if="player.character.icon" />
+                                                                <span v-if="!player.character.icon">?</span>
+                                                            </div>
+                                                        </div>
+                                                        <select class="form-control" v-model="player.character">
+                                                            <option v-for="character in characterList" v-bind:value="character">
+                                                                {{ character.name }}
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col form-group">
+                                                    <label>Flag</label>
+                                                    <div class="input-group">
+                                                        <div class="input-group-prepend">
+                                                            <div class="input-group-text">
+                                                                <img v-bind:src="player.flag.icon" height="16" v-if="player.flag.icon" />
+                                                                <span v-if="!player.flag.icon">?</span>
+                                                            </div>
+                                                        </div>
+                                                        <select class="form-control" v-model="player.flag">
+                                                            <option
+                                                                v-for="(countryName, countryCode) in flagList"
+                                                                v-bind:value="getFlag(countryName, countryCode)">
+                                                                {{ countryName }}
+                                                            </option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+
+                                                <div class="col form-group">
+                                                    <label>Sponsor</label>
+                                                    <input type="text" class="form-control" v-model="player.sponsor.name" />
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label>Score</label>
+                                                <input type="number" class="form-control form-control-lg" v-model="player.score" />
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div>
+                                        <button type="button" v-if="entrant.players.length === 2" @click="swapPlayers(entrant)" class="btn btn-default">Swap players</button>
+                                        <button type="button" @click="resetForm" class="btn btn-default">Reset form</button>
+                                        <button type="button" @click="clearChanges" class="btn btn-default">Clear changes</button>
+                                    </div>
+
+
+                                </details>
                             </div>
                         </div>
-
-                        <div>
-                            <button type="button" @click="swapPlayers" class="btn btn-default">Swap players</button>
-                            <button type="button" @click="resetForm" class="btn btn-default">Reset form</button>
-                            <button type="button" @click="clearChanges" class="btn btn-default">Clear changes</button>
-                        </div>
-
-
                     </details>
+
 
                     <hr />
 
@@ -178,24 +193,24 @@
                     <details>
                         <summary><strong>Comentators</strong></summary>
                         <div class="row">
-                            <div v-for="(commentator, commentatorIndex) in scoreBoard.commentators" class="col-md-3">
-                                <h3>Commentator {{ commentatorIndex + 1 }}</h3>
+                            <div v-for="(comentator, comentatorIndex) in scoreBoard.comentators" class="col-md-3">
+                                <h3>Comentator {{ comentatorIndex + 1 }}</h3>
                                 <div class="form-group">
                                     <label>Name</label>
-                                    <input type="text" v-model="commentator.name" class="form-control" />
+                                    <input type="text" v-model="comentator.name" class="form-control" />
                                 </div>
                                 <div class="form-group">
                                     <label>Handle</label>
-                                    <input type="text" v-model="commentator.handle" class="form-control" />
+                                    <input type="text" v-model="comentator.handle" class="form-control" />
                                 </div>
                                 <div class="actions">
-                                    <button type="button" class="btn btn-danger" v-on:click="removeCommentator(commentatorIndex)">Remove</button>
+                                    <button type="button" class="btn btn-danger" v-on:click="removeComentator(comentatorIndex)">Remove</button>
                                 </div>
                             </div>
                         </div>
                         <br />
                         <div class="actions">
-                            <button type="button" class="btn btn-primary" v-on:click="addCommentator">Add commentator</button>
+                            <button type="button" class="btn btn-primary" v-on:click="addComentator">Add comentator</button>
                         </div>
                     </details>
 
