--- a/html/overlays/melee/singles/index.html
+++ b/html/overlays/melee/singles/index.html
@@ -13,43 +13,43 @@
 <body>
 	<div class="scoreboard" id="scoreboard">
 		<div class="stream-content">
-			<div class="score" v-if="scoreBoard.players">
+			<div class="score" v-if="scoreBoard.entrants">
 				<span class="label-decoration label-decoration-left">&nbsp;</span>
-                <div class="player player-1 label" v-if="scoreBoard.players[0]">
+                <div class="player player-1 label" v-if="scoreBoard.entrants[0] && scoreBoard.entrants[0].players[0]">
                     <span class="player-score">
-                        {{ scoreBoard.players[0].score }}
+                        {{ scoreBoard.entrants[0].players[0].score }}
                     </span>
 
                     <span class="player-flag">
-                        <img v-bind:src="scoreBoard.players[0].flag.icon" v-if="scoreBoard.players[0].flag.icon" class="player-flag-icon" />
+                        <img v-bind:src="scoreBoard.entrants[0].players[0].flag.icon" v-if="scoreBoard.entrants[0].players[0].flag.icon" class="player-flag-icon" />
                     </span>
 
                     <span class="player-name">
-                        {{ scoreBoard.players[0].name }}
+                        {{ scoreBoard.entrants[0].players[0].name }}
                     </span>
 
-                    <span class="player-char-wrapper" v-if="isFilledIn(scoreBoard.players[0].character.icon)">
-                        <img class="player-char" v-bind:src="scoreBoard.players[0].character.icon" />
+                    <span class="player-char-wrapper" v-if="isFilledIn(scoreBoard.entrants[0].players[0].character.icon)">
+                        <img class="player-char" v-bind:src="scoreBoard.entrants[0].players[0].character.icon" />
                     </span>
                 </div>
 				<span class="label-decoration label-decoration-right">&nbsp;</span>
 				
 				<span class="label-decoration label-decoration-left">&nbsp;</span>
-                <div class="player player-2 label" v-if="scoreBoard.players[1]">
+                <div class="player player-2 label" v-if="scoreBoard.entrants[1] && scoreBoard.entrants[1].players[0]">
                     <span class="player-score">
-                        {{ scoreBoard.players[1].score }}
+                        {{ scoreBoard.entrants[1].players[0].score }}
                     </span>
 
                     <span class="player-flag">
-                        <img v-bind:src="scoreBoard.players[1].flag.icon" v-if="scoreBoard.players[1].flag.icon" class="player-flag-icon" />
+                        <img v-bind:src="scoreBoard.entrants[1].players[0].flag.icon" v-if="scoreBoard.entrants[1].players[0].flag.icon" class="player-flag-icon" />
                     </span>
 
                     <span class="player-name">
-                        {{ scoreBoard.players[1].name }}
+                        {{ scoreBoard.entrants[1].players[0].name }}
                     </span>
 
-                    <span class="player-char-wrapper" v-if="isFilledIn(scoreBoard.players[1].character.icon)">
-                        <img class="player-char" v-bind:src="scoreBoard.players[1].character.icon" />
+                    <span class="player-char-wrapper" v-if="isFilledIn(scoreBoard.entrants[1].players[0].character.icon)">
+                        <img class="player-char" v-bind:src="scoreBoard.entrants[1].players[0].character.icon" />
                     </span>
                 </div>
 				<span class="label-decoration label-decoration-right">&nbsp;</span>
