--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -77,8 +77,21 @@
                     <details open="true">
                         <summary><strong>Teams</strong></summary>
 
+                        <div>
+                            <button class="btn btn-success" @click="addEntrant">
+                                <i class="fa fa-plus"></i>
+                                Add team
+                            </button>
+                        </div>
+
+
                         <div class="row">
                             <div class="col-md-6" v-for="(entrant, entrantIndex) in scoreBoard.entrants">
+
+                            <button class="btn btn-danger float-right" @click="removeEntrant(entrantIndex)" title="Remove team">
+                                <i class="fa fa-times"></i>
+                            </button>
+
                                 <div class="form-group">
                                     <label>Name</label>
                                     <input type="text" class="form-control" v-model="entrant.name" />
