Label changes on the buttons

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -28,7 +28,7 @@
                             </small>
                         </div>
                         <div class="äctions">
-                            <button type="submit" class="btn btn-primary">Update</button>
+                            <button type="submit" class="btn btn-primary">Get queues</button>
                         </div>
                     </form>
                 </details>
@@ -292,7 +292,7 @@
                     <hr />
 
                     <p>
-                        <button type="submit" class="btn btn-primary">Update</button>
+                        <button type="submit" class="btn btn-primary">Update scoreboard</button>
                     </p>
                 </form>
 
