--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -101,6 +101,15 @@
                                 <i class="fa fa-swap"></i>
                                 Swap entrants 
                             </button>
+                           
+                            <br/>
+
+                            <div>
+                                <label>
+                                    <input type="checkbox" v-model="options.autoGenerateEntrantNames" />
+                                    Auto generate entrant/team names
+                                </label>
+                            </div>
                         </div>
 
                         <br/>
@@ -108,7 +117,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="jumbotron text-center" v-if="scoreBoard.entrants && scoreBoard.entrants.length === 0">
-                                    <h4>No entrants added.<br/>Click <a href @click.prevent="addEntrant">here</a> to add an entratn.</h4>
+                                    <h4>No entrants added.<br/>Click <a href @click.prevent="addEntrant">here</a> to add an entrant.</h4>
                                 </div>
                             </div>
 
@@ -123,9 +132,14 @@
                                     <div class="card-body">
 
                                         <div class="row">
-                                            <div class="form-group col-8">
+                                            <div class="form-group col-8" v-if="!options.autoGenerateEntrantNames">
                                                 <label>Name</label>
                                                 <input type="text" class="form-control" v-model="entrant.name" />
+                                            </div>
+
+                                            <div class="form-group col-8" v-if="options.autoGenerateEntrantNames">
+                                                <label>Name</label><br/>
+                                                <strong>{{ entrant.name }}</strong>
                                             </div>
 
                                             <div class="form-group col-4">
@@ -171,7 +185,7 @@
                                                                 <div class="card-body">
                                                                     <div class="form-group">
                                                                         <label>Name</label>
-                                                                        <input type="text" class="form-control" v-model="player.name" />
+                                                                        <input type="text" class="form-control" v-model="player.name" @change="onPlayerNameChange(entrant)" />
                                                                     </div>
 
 
