--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -281,26 +281,44 @@
                     <hr />
                     <details>
                         <summary><strong>Comentators</strong></summary>
+
+                        <br/>
+
+                        <div class="actions">
+                            <button type="button" class="btn btn-primary" v-on:click="addComentator">
+                                <i class="fa fa-plus"></i>
+                                Add comentator</button>
+                        </div>
+
+                        <br/>
+
                         <div class="row">
-                            <div v-for="(comentator, comentatorIndex) in scoreBoard.comentators" class="col-md-3">
-                                <h3>Comentator {{ comentatorIndex + 1 }}</h3>
-                                <div class="form-group">
-                                    <label>Name</label>
-                                    <input type="text" v-model="comentator.name" class="form-control" />
+                            <div class="col-md-12"> 
+                                <div class="jumbotron text-center" v-if="!scoreBoard.comentators || scoreBoard.comentators.length === 0">
+                                    <h4>No comentators added.<br/>Click <a href @click.prevent="addComentator">here</a> to add a comentator.</h4>
                                 </div>
-                                <div class="form-group">
-                                    <label>Handle</label>
-                                    <input type="text" v-model="comentator.handle" class="form-control" />
-                                </div>
-                                <div class="actions">
-                                    <button type="button" class="btn btn-danger" v-on:click="removeComentator(comentatorIndex)">Remove</button>
+                            </div>
+
+                            <div v-for="(comentator, comentatorIndex) in scoreBoard.comentators" class="col-md-6">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <button type="button" class="btn btn-danger btn-sm pull-right" v-on:click="removeComentator(comentatorIndex)" title="Remove comentator"><i class="fa fa-times"></i></button>
+                                        <strong>Comentator {{ comentatorIndex + 1 }}</strong>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="form-group">
+                                            <label>Name</label>
+                                            <input type="text" v-model="comentator.name" class="form-control" />
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Handle</label>
+                                            <input type="text" v-model="comentator.handle" class="form-control" />
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <br />
-                        <div class="actions">
-                            <button type="button" class="btn btn-primary" v-on:click="addComentator">Add comentator</button>
-                        </div>
                     </details>
 
                     <hr />
