Added score inc/dec buttons

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -144,7 +144,24 @@
 
                                             <div class="form-group col-4">
                                                 <label>Score</label>
-                                                <input type="number" class="form-control form-control" v-model="entrant.score" />
+                                                <div class="input-group">
+                                                    <input type="number" class="form-control form-control" v-model="entrant.score" />
+                                                    <div class="input-group-append">
+
+                                                        <button class="btn btn-outline-secondary"
+                                                            type="button"
+                                                            title="Decrease score"
+                                                            @click="entrant.score--">
+                                                            <i class="fa fa-minus"></i>
+                                                        </button>
+                                                        <button class="btn btn-outline-secondary"
+                                                            type="button"
+                                                            title="Increase score"
+                                                            @click="entrant.score++">
+                                                            <i class="fa fa-plus"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
                                             </div>
 
                                             <div class="col-12">
