Fixed scoring on overlay

--- a/html/overlays/melee/singles/index.html
+++ b/html/overlays/melee/singles/index.html
@@ -17,7 +17,7 @@
 				<span class="label-decoration label-decoration-left">&nbsp;</span>
                 <div class="player player-1 label" v-if="scoreBoard.entrants[0] && scoreBoard.entrants[0].players[0]">
                     <span class="player-score">
-                        {{ scoreBoard.entrants[0].players[0].score }}
+                        {{ scoreBoard.entrants[0].score }}
                     </span>
 
                     <span class="player-flag">
@@ -37,7 +37,7 @@
 				<span class="label-decoration label-decoration-left">&nbsp;</span>
                 <div class="player player-2 label" v-if="scoreBoard.entrants[1] && scoreBoard.entrants[1].players[0]">
                     <span class="player-score">
-                        {{ scoreBoard.entrants[1].players[0].score }}
+                        {{ scoreBoard.entrants[1].score }}
                     </span>
 
                     <span class="player-flag">
