Light improvements for the melee overlay for teams

--- a/html/overlays/melee/singles/index.html
+++ b/html/overlays/melee/singles/index.html
@@ -25,7 +25,7 @@
                     </span>
 
                     <span class="player-name">
-                        {{ scoreBoard.entrants[0].players[0].name }}
+                        {{ scoreBoard.entrants[0].name }}
                     </span>
 
                     <span class="player-char-wrapper" v-if="isFilledIn(scoreBoard.entrants[0].players[0].character.icon)">
@@ -45,7 +45,7 @@
                     </span>
 
                     <span class="player-name">
-                        {{ scoreBoard.entrants[1].players[0].name }}
+                        {{ scoreBoard.entrants[1].name }}
                     </span>
 
                     <span class="player-char-wrapper" v-if="isFilledIn(scoreBoard.entrants[1].players[0].character.icon)">
