Forced scores to be of number type

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -145,7 +145,7 @@
                                             <div class="form-group col-4">
                                                 <label>Score</label>
                                                 <div class="input-group">
-                                                    <input type="number" class="form-control form-control" v-model="entrant.score" />
+                                                    <input type="number" class="form-control form-control" v-model.number="entrant.score" />
                                                     <div class="input-group-append">
 
                                                         <button class="btn btn-outline-secondary"
