--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>client</title>
+    <title>HypestBoard administration</title>
   </head>
   <body>
     <div id="app"></div>
